--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,34 +1,12 @@
 sonar.projectKey=ValerioLucandri_WorkineThor
 sonar.organization=valeriolucandri
-sonar.projectName=WorkineThor
 
-# =====================================================
-#   Meta-data for the project
-# =====================================================
-
-sonar.links.homepage=https://github.com/valeriolucandri/WorkineThor
-sonar.links.ci=https://travis-ci.org/valeriolucandri/WorkineThor
-sonar.links.scm=https://github.com/valeriolucandri/WorkineThor
-sonar.links.issue=https://github.com/valeriolucandri/WorkineThor/issues
-
-
-# =====================================================
-#   Properties that will be shared amongst all modules
-# =====================================================
-
-sonar.host.url=https://sonarcloud.io
-sonar.organization=valeriolucandri
-sonar.login=967d67467f3b336b9ab7d0181916f59ecefafaee
-sonar.sources=src
-sonar.language=java
-
-
-
-# =====================================================
-#   Java config
-# =====================================================
-sonar.java.source=1.8
-sonar.java.binaries=.
-
-# Debug
-sonar.verbose=true
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=WorkineThor
+#sonar.projectVersion=1.0
+ 
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+ 
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
