--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 dist: xenial
 language: java
-install: ant deps
 jdk:
- - oraclejdk8
- - openjdk8
+ -openjdk8
 addons:
  apt:
     packages:
         - ant
-        
+
 script: 
-     - ant build
- 
+     ant build
