--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ dist: xenial
 language: java
 jdk:
  -openjdk8
+ -oraclejdk8
+ 
 addons:
  apt:
     packages:
         - ant
 
-script: 
-     ant build
+script: ant build
