--- a/WorkineThor/bin/build.xml
+++ b/WorkineThor/bin/build.xml
@@ -19,7 +19,7 @@
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
-            <fileset dir="WorkineThor/src/">
+            <fileset dir="src">
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -33,7 +33,7 @@
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
-            <src path="WorkineThor/src/"/>
+            <src path="src"/>
             <classpath refid="WorkineThor.classpath"/>
         </javac>
     </target>
