--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
     <path id="JavaFX">
-        <pathelement location="ExternalJar/org.eclipse.fx.ide.css.jfx8_2.3.0.201603030809.jar"/>
+        <pathelement location="ExternalJar/jfxrt.jar"/>
     </path>
     <path id="JSON">
 	<pathelement location="ExternalJar/java-json.jar"/>
