--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,17 @@ dist: xenial
 language: java
 jdk:
  -openjdk8
-
+ 
 addons:
   apt:
     packages:
         - ant
+  sonarcloud:
+    organization: "stewiegit"
+    token:
+      secure: "**************************" # encrypted value of your token
 
 script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - sonar-scanner
   - ant build
