--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
-dist: xenial
+dist: trusty
 language: java
 jdk:
  -openjdk8
- 
+
 addons:
   apt:
     packages:
         - ant
-        
+  sonarcloud:
+    organization: "klaigor"
+    token:
+      secure: "cd61590bf81e438a881c45997839884d3818b955" # encrypted value of your token
+          
 script:
   - ant build
+  - sonar-scanner
