--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,33 @@
 sonar.projectKey=Klaigor_WorkineThor
-sonar.organization=klaigor
+sonar.projectName=WorkineThor
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=WorkineThor
-#sonar.projectVersion=1.0
- 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
- 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# =====================================================
+#   Meta-data for the project
+# =====================================================
+
+sonar.links.homepage=https://github.com/Klaigor/WorkineThor
+sonar.links.ci=https://travis-ci.org/Klaigor/WorkineThor
+sonar.links.scm=https://github.com/Klaigor/WorkineThor
+sonar.links.issue=https://github.com/Klaigor/WorkineThor/issues
+
+
+# =====================================================
+#   Properties that will be shared amongst all modules
+# =====================================================
+
+sonar.host.url=https://sonarcloud.io
+sonar.organization=Klaigor
+sonar.login=cd61590bf81e438a881c45997839884d3818b955
+sonar.sources=src
+sonar.language=java
+
+
+
+# =====================================================
+#   Java config
+# =====================================================
+sonar.java.source=1.8
+sonar.java.binaries=.
+
+# Debug
+sonar.verbose=true
