--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,7 +18,7 @@ sonar.links.issue=https://github.com/Klaigor/WorkineThor/issues
 sonar.host.url=https://sonarcloud.io
 sonar.organization=Klaigor
 sonar.login=4797b663a1464ae493713b92bd53925eec91bdbf
-sonar.sources=src
+sonar.sources=WorkineThor/src
 sonar.language=java
 
 
