--- a/WorkineThor/.classpath
+++ b/WorkineThor/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Fuma/Documents/universita/ispw/WorkineThor.git/trunk/ExternalJar/java-json.jar"/>
+	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/ExternalJar/java-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
