--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -32,4 +32,4 @@ sonar.java.binaries=.
 # Debug
 sonar.verbose=true
 
-sonar.exclusion=WorkineThor/src/mega/**
+sonar.exclusion=WorkineThor/src/mega/**/*.java
