--- a/build.xml
+++ b/build.xml
@@ -21,12 +21,20 @@
     <path id="JSQL">
 	<pathelement location="ExternalJar/mysql-connector-java-8.0.19.jar"/>
     </path>
+    <path id="Tomcat">
+    <pathelement location="ExternalJar/tomcat-api.jar">
+    </path>
+    <path id="TomcatServlet">
+    <pathelement location="ExternalJar/servlet-api.jar">
+    </path>
     <path id="WorkineThor.classpath">
         <pathelement location="bin"/>
         <path refid="JavaFX"/>
-	<path refid="JSON"/>
+	    <path refid="JSON"/>
     	<path refid="JUnit"/>
-	<path refid="JSQL"/>
+	    <path refid="JSQL"/>
+        <path refid="Tomcat"/>
+        <path refid="TomcatServlet"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
