--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,6 +20,7 @@ sonar.organization=Klaigor
 sonar.login=4797b663a1464ae493713b92bd53925eec91bdbf
 sonar.sources=WorkineThor/src
 sonar.language=java
+sonar.language=html
 sonar.coverage.jacoco.xmlReportPaths=WorkineThor/LoginControllerTest.xml
 
 
