--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,6 +21,8 @@ sonar.login=4797b663a1464ae493713b92bd53925eec91bdbf
 sonar.sources=WorkineThor/src
 sonar.language=java
 sonar.language=html
+sonar.language=jsp
+sonar.language=web
 sonar.coverage.jacoco.xmlReportPaths=WorkineThor/LoginControllerTest.xml
 
 
