--- a/WorkineThor/.classpath
+++ b/WorkineThor/.classpath
@@ -3,11 +3,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="A:/Documenti/Lezioni/ISPW/Progetto/WorkineThor/trunk/ExternalJar/java-json.jar"/>
-	<classpathentry kind="lib" path="A:/Documenti/Lezioni/ISPW/Progetto/WorkineThor/trunk/ExternalJar/mysql-connector-java-8.0.19.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/ExternalJar/java-json.jar"/>
+	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/ExternalJar/mysql-connector-java-8.0.19.jar"/>
+	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/ExternalJar/junit.jar"/>
+	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/WorkineThor/WebContent/WEB-INF/lib/standard.jar"/>
+	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/WorkineThor/WebContent/WEB-INF/lib/jstl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
