--- a/WorkineThor/.classpath
+++ b/WorkineThor/.classpath
@@ -7,10 +7,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/ExternalJar/java-json.jar"/>
-	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/ExternalJar/mysql-connector-java-8.0.19.jar"/>
-	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/ExternalJar/junit.jar"/>
-	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/WorkineThor/WebContent/WEB-INF/lib/standard.jar"/>
-	<classpathentry kind="lib" path="D:/Documenti/Lezioni/ISPW/WorkineThor.git/trunk/WorkineThor/WebContent/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="A:/Documenti/Lezioni/ISPW/Progetto/WorkineThor/trunk/ExternalJar/java-json.jar"/>
+	<classpathentry kind="lib" path="A:/Documenti/Lezioni/ISPW/Progetto/WorkineThor/trunk/ExternalJar/mysql-connector-java-8.0.19.jar"/>
+	<classpathentry kind="lib" path="A:/Documenti/Lezioni/ISPW/Progetto/WorkineThor/trunk/ExternalJar/servlet-api.jar"/>
+	<classpathentry kind="lib" path="A:/Documenti/Lezioni/ISPW/Progetto/WorkineThor/trunk/ExternalJar/tomcat-api.jar"/>
+	<classpathentry kind="lib" path="A:/Documenti/Lezioni/ISPW/Progetto/WorkineThor/trunk/WorkineThor/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="A:/Documenti/Lezioni/ISPW/Progetto/WorkineThor/trunk/WorkineThor/WebContent/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
